--- a/css/type.css
+++ b/css/type.css
@@ -8,6 +8,10 @@ html {
   line-height: 1.3;
 }
 
+body {
+  background-color: #e2e2e2;
+}
+
 a {
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
